--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-staged": "lint-staged"
   },
+  "lint-staged": {
+    "**/*.js": "eslint --fix"
+  },
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.48.0",
-    "eslint-config-semistandard": "^17.0.0"
+    "eslint-config-semistandard": "^17.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1"
   }
 }
