--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint-staged": "lint-staged"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
-    "**/*.js": "eslint --fix"
+    "**/*.js": [
+      "git add",
+      "eslint --fix"
+    ]
   },
-    "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged"
-      }
-    },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
