--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Tests to run: 0 \" && exit 0",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.js": [
+    "*.js": [
       "eslint --ignore-path .gitignore --fix",
       "git add"
     ]
@@ -23,7 +25,7 @@
   "devDependencies": {
     "eslint": "^8.48.0",
     "eslint-config-semistandard": "^17.0.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "lint-staged": "^14.0.1"
   }
 }
