mod: lint-staged

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --ignore-path .gitignore --fix",
-      "git add"
+    "**/*.js": [
+      "eslint --ignore-path .gitignore --fix"
     ]
   },
   "husky": {
