--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Tests to run: 0 \" && exit 0",
+    "test": "jest --passWithNoTests",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
@@ -25,6 +25,7 @@
     "eslint": "^8.48.0",
     "eslint-config-semistandard": "^17.0.0",
     "husky": "^8.0.0",
+    "jest": "^29.6.4",
     "lint-staged": "^14.0.1"
   }
 }
