--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --detectOpenHandles",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
@@ -22,10 +22,16 @@
   "author": "Pawel Giers",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "eslint": "^8.48.0",
     "eslint-config-semistandard": "^17.0.0",
     "husky": "^8.0.0",
     "jest": "^29.6.4",
-    "lint-staged": "^14.0.1"
+    "lint-staged": "^14.0.1",
+    "supertest": "^6.3.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0"
   }
 }
